--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <li>Park Name: National park name </li>
                 <li>Category: High-level taxonomic grouping</li>
                 <li>Category Sort: Organizing species into hierarchical or categorical groups based on shared characteristics or attributes. </li> 
-                <li>Order: Taxonomic </li>
+                <li>Order: Taxonomic order</li>
                 <li>Family: Taxonomic family </li>
                 <li>Taxon Code: Unique code to categorize and classify different species</li>
                 <li>TSN: Taxonomic Serial Number: a unique taxon identifier used by the Integrated Taxonomic
@@ -82,7 +82,7 @@
                 <li>Occurrence: A designation given to park species records that describes a park’s knowledge of a
                     species’ presence in the park.</li>
                 <li>Nativeness: Determines if an organism is native, non-native, or unknown to a park</li>
-                <li>Abundance: The amount of </li>
+                <li>Abundance: The abundance of a species.</li>
                 <li>NPS Tags: A designation given to a park species, or that acts as a modifier for another species
                     attribute</li>
                 <li>References: A document, publication, article, database, or other information resource that contains
@@ -130,7 +130,8 @@
                 <li>Species Richness by Abundance in National Parks: Redwood National Park has a large amount of unknown species</li>
                 <li>Heatmap of Species Count by Abundance and Nativeness: Joshua Tree National Park has the most common native species, suggesting ecosystem stability. 
                     In contrast, Redwood National Park has a high number of Unknown species, making an unknown treat of invasive species more likely. </li>
-                <li>Non-Native Abundant Species: </li>
+                <li>Non-Native Abundant Species: Of all the non-native species, most are vascular plants, specifially Poales, and most are from Redwood 
+                    National Park. Thus, any efforts to limit abundant non-native species should focus on Poales and at Redwood. </li>
             </ul>
             <p>These visualizations show the urgent need to improve species documentation in Calfornia's national parks to protect their biodiversity
                 and address and mitigate threats of invasive species. By identifying these threats, park rangers and managers can better preserve the ecological balance, maintian species 
@@ -139,9 +140,18 @@
         </section>
 
         <section>
-            <h3>Future Modifications</h3>
-            <p></p>
-
+            <h3>Future Plans</h3>
+            <p>Future plans for this project involve including more California National Parks to further the depth and breadth of the research.
+                We also would like to create a map representation of the data to add a different type of visualization. Lastly, we did 
+                preliminary research into calculating our own metrics of biodiversity from the dataset, such as a Shannon Diversity Index, 
+                which be a unique way to compare the parks that we choose to evaluate.
+            </p>
+            <h3>Limitations</h3>
+            <p>One limitation of our project is the data collection methods. We do not know that there is a standardized method across parks, 
+                so any comparisons between parks need be taken with a grain of salt. Additionally, while our dataset has both categorical and 
+                continuous variables, there are fewer continuous ones, so merging with another dataset of species information may provide more 
+                numerical data for deeper and more interesting analyses.
+            </p>
         </section>
         
         <section>
