--- a/invasive.html
+++ b/invasive.html
@@ -22,9 +22,9 @@
         <section>
             <h2>About this page</h2>
             <p>This page explores the abundance and nativeness of species in California's National Parks, allowing us to
-                explore how this plays into biodiversity and th preservation of these parks' ecosystems.</p>
+                explore how this plays into biodiversity and the preservation of these parks' ecosystems.</p>
             <h4>Abundance and Nativeness</h4>
-            <iframe src="heatmap.html" width="100%" height="600" frameborder="0"></iframe>
+            <iframe src="heatmap.html" width="100%" height="450" frameborder="0"></iframe>
             <p>This interactive heatmap shows use the species count data categorized by abundance and nativeness between
                 the three parks.
                 Users can toggle between radio buttons to show the species count, abundance, and nativeness for each
