--- a/index.html
+++ b/index.html
@@ -122,20 +122,18 @@
                 biodiversity. Protecting these parks requires ongoing efforts to monitor species diversity, abundance, and distribution.
             </p>
             <ul>
+                <li>Species Richness: Sequoia and Kings Canyon National Park has the highest number of species richness</li>
                 <li>Species Count Across Parks by Category: Shows that all three parks have the highest amount of unique vascular plants.  </li>
                 <li>Combined Vouchers and References by Park and Category: Redwood National Park shows a broader spread of combined vouchers and references counts across species 
-                    categories, suggesting a more balanced distribution of recorded species.
-                </li>
-                <li>Species Family: Sequoia and Kings Canyon National Park has the highest number of species richness</li>
-                <li>Species Richness by Abundance in National Parks: Redwood National Park has a large amount of unknown species</li>
+                    categories, suggesting a more balanced distribution of recorded species.</li>
                 <li>Heatmap of Species Count by Abundance and Nativeness: Joshua Tree National Park has the most common native species, suggesting ecosystem stability. 
                     In contrast, Redwood National Park has a high number of Unknown species, making an unknown treat of invasive species more likely. </li>
                 <li>Non-Native Abundant Species: Of all the non-native species, most are vascular plants, specifially Poales, and most are from Redwood 
                     National Park. Thus, any efforts to limit abundant non-native species should focus on Poales and at Redwood. </li>
             </ul>
             <p>These visualizations show the urgent need to improve species documentation in Calfornia's national parks to protect their biodiversity
-                and address and mitigate threats of invasive species. By identifying these threats, park rangers and managers can better preserve the ecological balance, maintian species 
-                richness, and ensure the long-term heald and resilience of these vital natural areas for everyone to enjoy for many more years to come. 
+                and address and mitigate threats of invasive species. By identifying these threats, park rangers and managers can better preserve the ecological balance, maintain species 
+                richness, and ensure the long-term health and resilience of these vital natural areas for everyone to enjoy for many more years to come. 
             </p>
         </section>
 
