--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="index.html">Home</a>
             <a href="california.html">California's Diverse Species</a>
             <a href="invasive.html">The Dangers of Invasive Species</a>
+            <a href="conclusion.html">The Dangers of Invasive Species</a>
         </nav>
     </header>
 
