--- a/california.html
+++ b/california.html
@@ -15,6 +15,7 @@
             <a href="index.html">Home</a>
             <a href="california.html">California's Diverse Species</a>
             <a href="invasive.html">The Dangers of Invasive Species</a>
+            <a href="conclusion.html">The Dangers of Invasive Species</a>
         </nav>
     </header>
 
@@ -66,7 +67,7 @@
                 the future
                 research or conservation efforts to ensure comprehensive biodiversity records.
             </p>
-
+        </section>
     </main>
 
     <footer>
