--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="index.html">Home</a>
             <a href="california.html">California's Diverse Species</a>
             <a href="invasive.html">The Dangers of Invasive Species</a>
-            <a href="conclusion.html">The Dangers of Invasive Species</a>
+            <a href="conclusion.html">Conclusion</a>
         </nav>
     </header>
 
@@ -116,52 +116,6 @@
 
         </section>
 
-        <section>
-            <h3>Conclusion</h3>
-            <p>Calfornia's national parks have rich biodiversity, but there are still large gaps in species documentation. These gaps are concerning because 
-                thorough documentation is crucial in identifying and addressing the presence of invasive species, that pose a serious threat to ecosystems and native 
-                biodiversity. Protecting these parks requires ongoing efforts to monitor species diversity, abundance, and distribution.
-            </p>
-            <ul>
-                <li>Species Richness: Sequoia and Kings Canyon National Park has the highest number of species richness</li>
-                <li>Species Count Across Parks by Category: Shows that all three parks have the highest amount of unique vascular plants.  </li>
-                <li>Combined Vouchers and References by Park and Category: Redwood National Park shows a broader spread of combined vouchers and references counts across species 
-                    categories, suggesting a more balanced distribution of recorded species.</li>
-                <li>Heatmap of Species Count by Abundance and Nativeness: Joshua Tree National Park has the most common native species, suggesting ecosystem stability. 
-                    In contrast, Redwood National Park has a high number of Unknown species, making an unknown treat of invasive species more likely. </li>
-                <li>Non-Native Abundant Species: Of all the non-native species, most are vascular plants, specifially Poales, and most are from Redwood 
-                    National Park. Thus, any efforts to limit abundant non-native species should focus on Poales and at Redwood. </li>
-            </ul>
-            <p>These visualizations show the urgent need to improve species documentation in Calfornia's national parks to protect their biodiversity
-                and address and mitigate threats of invasive species. By identifying these threats, park rangers and managers can better preserve the ecological balance, maintain species 
-                richness, and ensure the long-term health and resilience of these vital natural areas for everyone to enjoy for many more years to come. 
-            </p>
-        </section>
-
-        <section>
-            <h3>Future Plans</h3>
-            <p>Future plans for this project involve including more California National Parks to further the depth and breadth of the research.
-                We also would like to create a map representation of the data to add a different type of visualization. Lastly, we did 
-                preliminary research into calculating our own metrics of biodiversity from the dataset, such as a Shannon Diversity Index, 
-                which be a unique way to compare the parks that we choose to evaluate.
-            </p>
-            <h3>Limitations</h3>
-            <p>One limitation of our project is the data collection methods. We do not know that there is a standardized method across parks, 
-                so any comparisons between parks need be taken with a grain of salt. Additionally, while our dataset has both categorical and 
-                continuous variables, there are fewer continuous ones, so merging with another dataset of species information may provide more 
-                numerical data for deeper and more interesting analyses.
-            </p>
-        </section>
-        
-        <section>
-            <h3>Contact the Creators!</h3>
-            <ul>
-                <li>Jasmine Chiou: <a href="mailto:chiou.ja@northeastern.edu">chiou.ja@northeastern.edu</a></li>
-                <li>Nidhi Hosamane: <a href="mailto:hosamane.n@northeastern.edu">hosamane.n@northeastern.edu</a></li>
-                <li>Ryan Masoud: <a href="mailto:masoud.r@northeastern.edu">masoud.r@northeastern.edu</a></li>
-                <li>Maahir Raval: <a href="mailto:raval.ma@northeastern.edu">raval.ma@northeastern.edu</a></li>
-            </ul>
-        </section>
     </main>
 
     <footer>
