--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p>Each row is one species that has been observed, including plants and animals. The 33 total columns
                 include information such as the species category, scientific name, common name, occurrence, nativeness,
                 and abundance, but not all 33 are useful to our analysis since a few are incomplete or repetitive. The
-                final number of columns in our data is 26 along with 4424 rows. </p>
+                final number of columns in our data is 26 along with 4424 rows! </p>
 
             <h3>Column Names</h3>
             <ul>
