--- a/california.html
+++ b/california.html
@@ -54,7 +54,7 @@
                 Tree National Park has no fish.</p>
 
             <h3>Vouchers and References</h3>
-            <img src="static_plots/boxplot.png" alt="Box Plot">
+            <iframe src="boxplot.html" width="100%" height="610" frameborder="0"></iframe>
             <p>This boxplot visualization displays the combined counts of vouchers and references across various
                 categories in the three national parks. The visualization highlights variations in species documentation
                 across parks and categories. The boxplot also has zero outliers because they may indicate gaps in
