--- a/california.html
+++ b/california.html
@@ -38,7 +38,7 @@
                 of species that can survive.</p>
 
             <h3>A Closer Look at Species Category in our Parks</h3>
-            <img src="static_plots/d3_barplot.png" alt="d3">
+            <img src="static_plots/d3-new.png" alt="d3">
 
             <p>The species in this data are categorized into six groups: amphibian, bird, fish, mammal, reptile, and
                 vascular plant. It is evident through this visualization that the Vascular Plant category dominates
