--- a/california.html
+++ b/california.html
@@ -58,14 +58,11 @@
             <p>This boxplot visualization displays the combined counts of vouchers and references across various
                 categories in the three national parks. The visualization highlights variations in species documentation
                 across parks and categories. The boxplot also has zero outliers because they may indicate gaps in
-                species
-                surveys or a lack of physical evidence for certain species in the parks. These gaps indicate the
-                importance of
-                expanding documentation efforts, especially in categories with low representation. By analyzing the
-                distribution
-                of vouchers and references, park managers can identify underrepresented species groups and prioritize
-                the future
-                research or conservation efforts to ensure comprehensive biodiversity records.
+                species surveys or a lack of physical evidence for certain species in the parks. These gaps indicate the
+                importance of expanding documentation efforts, especially in categories with low representation. By
+                analyzing the distribution of vouchers and references, park managers can identify underrepresented
+                species groups and prioritize the future research or conservation efforts to ensure comprehensive
+                biodiversity records.
             </p>
         </section>
     </main>
